fixing spacing

--- a/src/components/common/Header/styles/header.scss
+++ b/src/components/common/Header/styles/header.scss
@@ -44,7 +44,7 @@
     cursor: pointer;
 
     svg {
-      padding-right: 0.3125rem;
+      margin-right: 0.3125rem;
     }
 
     span {
@@ -72,7 +72,7 @@
         font-size: 10px;
         font-weight: 700;
         margin-left: 0.3125rem;
-        color: #FFF;
+        color: #fff;
       }
     }
   }
